# nep-lms

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
nep_lms/: cli.py  evaluators.py
nep_lms/core/: experiment.py  registry.py  variant.py
nep_lms/datasets/: build_teacher_embedding_corpus.py
nep_lms/datasets/nanobeir_ne/: README.md  translate_nanobeir.py
nep_lms/datasets/ne_mixed_retrieval/: ne_mixed_retrieval.ipynb
nep_lms/datasets/nepali_ecommerce_qa/: README.md  nepali_ecommerce_ir_dataset.jsonl  nepali_ecommerce_ir_eda.ipynb
nep_lms/datasets/reddit_comments/: README.md  reddit_comments_to_dataset.ipynb
nep_lms/embeddings/: dataset_loaders.py  evaluators.py  experiment.py  minilm_v3.py  nep_minilm_v3.ipynb  nep_minilm_v3_rag.ipynb  variants.py
nep_lms/embeddings/experiment_scopes/: __init__.py  base.py  beir.py  general.py  rag_qa.py
nep_lms/embeddings/variants/: __init__.py  base.py  minilm_l6_v3.py  minilm_l6_v3_rag.py
nep_lms/embeddings/variants/sanolm/: README.md  sanolm_base.py  sanolm_v1.py  train_tokenizer.py
nep_lms/research/: embedding_model_evaluation.ipynb  nanobeir_eval.csv
nep_lms/scripts/: benchmark_training.py  results.md
