[tool.poetry]
name = "nep-lms"
version = "0.1.0"
description = ""
authors = ["Sanjaya Subedi <jangedoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
torch = [
    { version = "^2.6", markers = "sys_platform != \"darwin\" and extra == \"cuda\"", source = "pytorch-cuda" },
    { version = "^2.6", markers = "extra != \"cuda\"", source = "pytorch-cpu" },
]
sentence-transformers = "^4.1.0"
datasets = "^4.0.0"
transformers = {version = "^4.55.2"}
accelerate = "^1.10.0"
lets-plot = "^4.4.1"
easyknn = "^0.5.0"
python-dotenv = "^1.0.1"
click = "^8.1.0"
trl = "^0.21.0"
peft = "^0.17.0"
einops = "^0.8.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
rope = "^1.13.0"
flake8 = "^7.1.1"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Declare two extras so that Poetry knows when to pull cpu vs. cuda
[tool.poetry.extras]
cpu = ["torch"]
cuda = ["torch"]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.poetry.scripts]
nep-lms = "nep_lms.cli:cli"
