[tool.poetry]
name = "nep-lms"
version = "0.1.0"
description = ""
authors = ["Sanjaya Subedi <jangedoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
torch = "^2.6"
sentence-transformers = "^4.1.0"
datasets = "^4.0.0"
transformers = {version = "^4.55.2"}
accelerate = "^1.10.0"
lets-plot = "^4.4.1"
easyknn = "^0.5.0"
python-dotenv = "^1.0.1"
click = "^8.1.0"
trl = "^0.21.0"
peft = "^0.17.0"
einops = "^0.8.1"
unsloth = "^2025.10.9"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
rope = "^1.13.0"
flake8 = "^7.1.1"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
nep-lms = "nep_lms.cli:cli"
